// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table prevents hidden saved objects from being deleted 1`] = `
<Fragment>
  <EuiSearchBar
    box={
      Object {
        "data-test-subj": "savedObjectSearchBar",
      }
    }
    filters={
      Array [
        Object {
          "field": "type",
          "multiSelect": "or",
          "name": "Type",
          "options": Array [
            Object {
              "value": 2,
            },
          ],
          "type": "field_value_selection",
        },
      ]
    }
    onChange={[Function]}
    toolsRight={
      Array [
        <EuiToolTip
          content={
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Selected objects can’t be deleted because they are hidden objects."
              id="savedObjectsManagement.objectsTable.table.deleteDisabledTooltip"
            />
          }
          delay="regular"
          display="inlineBlock"
          position="top"
        >
          <EuiButton
            color="danger"
            data-test-subj="savedObjectsManagementDelete"
            iconType="trash"
            isDisabled={true}
            onClick={[Function]}
            title="Unable to delete saved objects"
          >
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Delete"
              id="savedObjectsManagement.objectsTable.table.deleteButtonLabel"
            />
          </EuiButton>
        </EuiToolTip>,
        <EuiPopover
          anchorPosition="downCenter"
          button={
            <EuiButton
              iconSide="right"
              iconType="arrowDown"
              isDisabled={false}
              onClick={[Function]}
            >
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Export"
                id="savedObjectsManagement.objectsTable.table.exportPopoverButtonLabel"
              />
            </EuiButton>
          }
          closePopover={[Function]}
          display="inline-block"
          hasArrow={true}
          isOpen={false}
          ownFocus={true}
          panelPaddingSize="m"
          repositionToCrossAxis={true}
        >
          <EuiFormRow
            label={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Options"
                id="savedObjectsManagement.objectsTable.exportObjectsConfirmModal.exportOptionsLabel"
              />
            }
          >
            <EuiSwitch
              checked={true}
              label={
                <Memo(MemoizedFormattedMessage)
                  defaultMessage="Include related objects"
                  id="savedObjectsManagement.objectsTable.exportObjectsConfirmModal.includeReferencesDeepLabel"
                />
              }
              name="includeReferencesDeep"
              onChange={[Function]}
            />
          </EuiFormRow>
          <EuiFormRow>
            <EuiButton
              fill={true}
              iconType="exportAction"
              onClick={[Function]}
            >
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Export"
                id="savedObjectsManagement.objectsTable.table.exportButtonLabel"
              />
            </EuiButton>
          </EuiFormRow>
        </EuiPopover>,
      ]
    }
  />
  <EuiSpacer />
  <div
    data-test-subj="savedObjectsTable"
  >
    <EuiBasicTable
      columns={
        Array [
          Object {
            "align": "center",
            "data-test-subj": "savedObjectsTableRowType",
            "description": "Type of the saved object",
            "field": "type",
            "name": "Type",
            "render": [Function],
            "sortable": true,
            "width": "65px",
          },
          Object {
            "data-test-subj": "savedObjectsTableRowTitle",
            "dataType": "string",
            "description": "Title of the saved object",
            "field": "meta.title",
            "name": "Title",
            "render": [Function],
            "sortable": false,
          },
          Object {
            "field": "updated_at",
            "name": "Last updated",
            "render": [Function],
            "sortable": true,
            "width": "150px",
          },
          Object {
            "actions": Array [
              Object {
                "data-test-subj": "savedObjectsTableAction-inspect",
                "description": "Inspect this saved object",
                "icon": "inspect",
                "name": "Inspect",
                "onClick": [Function],
                "type": "icon",
              },
              Object {
                "data-test-subj": "savedObjectsTableAction-relationships",
                "description": "View the relationships this saved object has to other saved objects",
                "icon": "kqlSelector",
                "name": "Relationships",
                "onClick": [Function],
                "type": "icon",
              },
            ],
            "name": "Actions",
            "width": "80px",
          },
        ]
      }
      itemId="id"
      items={
        Array [
          Object {
            "attributes": Object {},
            "id": "1",
            "meta": Object {
              "editUrl": "#/management/kibana/dataViews/dataView/1",
              "icon": "indexPatternApp",
              "inAppUrl": Object {
                "path": "/management/kibana/dataViews/dataView/1",
                "uiCapabilitiesPath": "management.kibana.indexPatterns",
              },
              "title": "MyIndexPattern*",
            },
            "references": Array [],
            "type": "index-pattern",
          },
        ]
      }
      loading={false}
      noItemsMessage={
        <EuiI18n
          default="No items found"
          token="euiBasicTable.noItemsMessage"
        />
      }
      onChange={[Function]}
      pagination={
        Object {
          "pageIndex": 1,
          "pageSize": 2,
          "pageSizeOptions": Array [
            5,
            10,
            20,
            50,
          ],
          "totalItemCount": 3,
        }
      }
      rowProps={[Function]}
      selection={
        Object {
          "onSelectionChange": [Function],
        }
      }
      sorting={
        Object {
          "sort": Object {
            "direction": "desc",
            "field": "updated_at",
          },
        }
      }
      tableLayout="fixed"
    />
  </div>
</Fragment>
`;

exports[`Table should render normally 1`] = `
<Fragment>
  <EuiSearchBar
    box={
      Object {
        "data-test-subj": "savedObjectSearchBar",
      }
    }
    filters={
      Array [
        Object {
          "field": "type",
          "multiSelect": "or",
          "name": "Type",
          "options": Array [
            Object {
              "value": 2,
            },
          ],
          "type": "field_value_selection",
        },
      ]
    }
    onChange={[Function]}
    toolsRight={
      Array [
        <EuiToolTip
          delay="regular"
          display="inlineBlock"
          position="top"
        >
          <EuiButton
            color="danger"
            data-test-subj="savedObjectsManagementDelete"
            iconType="trash"
            isDisabled={false}
            onClick={[Function]}
          >
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Delete"
              id="savedObjectsManagement.objectsTable.table.deleteButtonLabel"
            />
          </EuiButton>
        </EuiToolTip>,
        <EuiPopover
          anchorPosition="downCenter"
          button={
            <EuiButton
              iconSide="right"
              iconType="arrowDown"
              isDisabled={false}
              onClick={[Function]}
            >
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Export"
                id="savedObjectsManagement.objectsTable.table.exportPopoverButtonLabel"
              />
            </EuiButton>
          }
          closePopover={[Function]}
          display="inline-block"
          hasArrow={true}
          isOpen={false}
          ownFocus={true}
          panelPaddingSize="m"
          repositionToCrossAxis={true}
        >
          <EuiFormRow
            label={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Options"
                id="savedObjectsManagement.objectsTable.exportObjectsConfirmModal.exportOptionsLabel"
              />
            }
          >
            <EuiSwitch
              checked={true}
              label={
                <Memo(MemoizedFormattedMessage)
                  defaultMessage="Include related objects"
                  id="savedObjectsManagement.objectsTable.exportObjectsConfirmModal.includeReferencesDeepLabel"
                />
              }
              name="includeReferencesDeep"
              onChange={[Function]}
            />
          </EuiFormRow>
          <EuiFormRow>
            <EuiButton
              fill={true}
              iconType="exportAction"
              onClick={[Function]}
            >
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Export"
                id="savedObjectsManagement.objectsTable.table.exportButtonLabel"
              />
            </EuiButton>
          </EuiFormRow>
        </EuiPopover>,
      ]
    }
  />
  <EuiSpacer />
  <div
    data-test-subj="savedObjectsTable"
  >
    <EuiBasicTable
      columns={
        Array [
          Object {
            "align": "center",
            "data-test-subj": "savedObjectsTableRowType",
            "description": "Type of the saved object",
            "field": "type",
            "name": "Type",
            "render": [Function],
            "sortable": true,
            "width": "65px",
          },
          Object {
            "data-test-subj": "savedObjectsTableRowTitle",
            "dataType": "string",
            "description": "Title of the saved object",
            "field": "meta.title",
            "name": "Title",
            "render": [Function],
            "sortable": false,
          },
          Object {
            "field": "updated_at",
            "name": "Last updated",
            "render": [Function],
            "sortable": true,
            "width": "150px",
          },
          Object {
            "actions": Array [
              Object {
                "data-test-subj": "savedObjectsTableAction-inspect",
                "description": "Inspect this saved object",
                "icon": "inspect",
                "name": "Inspect",
                "onClick": [Function],
                "type": "icon",
              },
              Object {
                "data-test-subj": "savedObjectsTableAction-relationships",
                "description": "View the relationships this saved object has to other saved objects",
                "icon": "kqlSelector",
                "name": "Relationships",
                "onClick": [Function],
                "type": "icon",
              },
            ],
            "name": "Actions",
            "width": "80px",
          },
        ]
      }
      itemId="id"
      items={
        Array [
          Object {
            "attributes": Object {},
            "id": "1",
            "meta": Object {
              "editUrl": "#/management/kibana/dataViews/dataView/1",
              "icon": "indexPatternApp",
              "inAppUrl": Object {
                "path": "/management/kibana/dataViews/dataView/1",
                "uiCapabilitiesPath": "management.kibana.indexPatterns",
              },
              "title": "MyIndexPattern*",
            },
            "references": Array [],
            "type": "index-pattern",
          },
        ]
      }
      loading={false}
      noItemsMessage={
        <EuiI18n
          default="No items found"
          token="euiBasicTable.noItemsMessage"
        />
      }
      onChange={[Function]}
      pagination={
        Object {
          "pageIndex": 1,
          "pageSize": 2,
          "pageSizeOptions": Array [
            5,
            10,
            20,
            50,
          ],
          "totalItemCount": 3,
        }
      }
      rowProps={[Function]}
      selection={
        Object {
          "onSelectionChange": [Function],
        }
      }
      sorting={
        Object {
          "sort": Object {
            "direction": "desc",
            "field": "updated_at",
          },
        }
      }
      tableLayout="fixed"
    />
  </div>
</Fragment>
`;
